<resources>
    <string name="app_name">中福互帮</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_txt_home">首页</string>
    <string name="tab_txt_shop">商城</string>
    <string name="tab_txt_call">呼叫器</string>
    <string name="tab_txt_service">服务</string>
    <string name="tab_txt_my">我的</string>

    <string name="popup_phone">打电话</string>
    <string name="popup_voice">语音</string>
    <string name="popup_task">文字输入</string>

    <string name="loading_text">加载中…</string>
    <string name="icon">icon</string>

    //base adapter
    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>

    //pull to refresh
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>

    <string name="cube_ptr_last_update">last update:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;seconds ago</string>
    <string name="cube_ptr_minutes_ago">&#160;minutes ago</string>
    <string name="cube_ptr_hours_ago">&#160;hours ago</string>
    <string name="title_activity_station_service">StationServiceActivity</string>

    <string name="network_not_info">当前没有可用网络,请检查设置!</string>
    <!--iat string-->
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_begin_ise">开始音频流评测</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_title_iat_show">显示听写界面</string>

    <string name="pref_key_translate">translate</string>

    <string name="my_group_booking">我的拼团</string>
    <string name="my_service">我的服务</string>
    <string name="my_add_service">添加服务者</string>
    <string name="my_offer_service_list">提供服务者列表</string>
    <string name="my_goods_list">提供商品列表</string>
    <string name="my_service_info_list">服务提供者信息列表</string>
    <string name="my_setting">通用设置</string>
    <string name="my_about">关于我们</string>
    <string name="img_deta">图文详情</string>
    <string name="pass_again_exti">"再按一次退出程序"</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_password">登录密码</string>
    <string name="login_sms">验证码登录</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="input_affirm_pwd">确认密码</string>
    <string name="tv_register">立即注册</string>
    <string name="tv_forget">忘记密码？</string>
    <string name="btn_code">获取验证码</string>
    <string name="tv_title">忘记密码</string>
    <string name="et_invitation_code">邀请码</string>
    <string name="residue">还剩余%d秒</string>
    <string name="btn_affirm">确认</string>
    <string name="issue">发布</string>
    <string name="issue_service">发布服务</string>
    <string name="my_addrss">我的地址</string>

</resources>
