<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.whombang.app.features.login.fragment.PassWordLoginFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/img_logo_forget"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="@color/bg"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">
            <EditText
                android:id="@+id/et_new_password1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:maxLength="30"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:hint="@string/input_phone"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHint="@color/color_999999"
                android:paddingLeft="20dp"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/cardview1"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/bg"
            app:cardCornerRadius="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHint="@color/color_999999"
                android:maxLength="30"
                android:singleLine="true"
                android:hint="@string/input_code"
                android:paddingLeft="20dp"
                />

            <Button
                android:id="@+id/btn_sms_code"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/button_bg"
                android:layout_height="wrap_content"
                android:text="@string/btn_code" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview2"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_login"
            android:layout_alignStart="@+id/btn_login"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="19dp"
            android:text="@string/tv_register" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_login"
            android:layout_alignRight="@+id/btn_login"
            android:layout_alignTop="@+id/tv_register"
            android:text="@string/tv_forget" />
    </RelativeLayout>

</RelativeLayout>
