<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.whombang.app.features.login.ForgetActivity">

    <include
        android:id="@+id/top"
        layout="@layout/wb_titlebar_layout" />

    <RelativeLayout
        android:id="@+id/register_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/img_logo_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/logo" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/img_logo_register"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="@color/bg"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_phone"
                android:maxLength="30"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/color_cursor" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/cardview1"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="@color/bg"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/et_register_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/input_code"
                android:maxLength="30"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/color_cursor" />

            <Button
                android:id="@+id/btn_register_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:background="@drawable/button_bg"
                android:text="@string/btn_code" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:id="@+id/cardview3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/cardview2"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardBackgroundColor="@color/bg"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/et_invitation_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/et_invitation_code"
                android:maxLength="30"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/color_cursor" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardview3"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>
